# firehol-service

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  pyproject.toml
firehol_service/: firehol_service_stack.py  types.py
firehol_service/constructs/: acl_construct.py  scheduling_construct.py  storage_construct.py
firehol_service/shared_resources/: dependency_layers.py  dynamo_db_event_store.py  internal_event_bus.py
libs/prolific_firehol/: boto3_session.py  config.py  helpers.py
libs/prolific_firehol/adapters/event_bus/: __init__.py  eventbridge.py
libs/prolific_firehol/adapters/event_store/: __init__.py  dynamo_db.py  localcache.py
libs/prolific_firehol/adapters/file_store/: __init__.py  s3.py
libs/prolific_firehol/events/: __init__.py  base.py  s3.py
libs/prolific_firehol/ports/: event_bus.py  event_store.py  file_store.py
src/change_stream_handler/: index.py  requirements.txt
src/firehol_scheduler/: index.py
src/ipset_file_processor/: index.py  requirements.txt
src/ipset_upload_acl/: index.py
tests/unit/: test_firehol_service_stack.py
